# serializer version: 1
# name: TestEditUserInfoView.test_edit_with_nir
  dict({
    'num_queries': 10,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'EditJobSeekerInfoForm.__init__[users/forms.py]',
          'EditJobSeekerInfoForm.__init__[www/dashboard/forms.py]',
          'EditJobSeekerInfoForm.__init__[common_apps/nir/forms.py]',
          'EditJobSeekerInfoForm.__init__[asp/forms.py]',
          'EditJobSeekerInfoForm.__init__[www/dashboard/forms.py]',
          'edit_user_info[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerprofile"."user_id",
                 "users_jobseekerprofile"."birthdate",
                 "users_jobseekerprofile"."birth_place_id",
                 "users_jobseekerprofile"."birth_country_id",
                 "users_jobseekerprofile"."nir",
                 "users_jobseekerprofile"."lack_of_nir_reason",
                 "users_jobseekerprofile"."pole_emploi_id",
                 "users_jobseekerprofile"."lack_of_pole_emploi_id_reason",
                 "users_jobseekerprofile"."asp_uid",
                 "users_jobseekerprofile"."education_level",
                 "users_jobseekerprofile"."resourceless",
                 "users_jobseekerprofile"."rqth_employee",
                 "users_jobseekerprofile"."oeth_employee",
                 "users_jobseekerprofile"."pole_emploi_since",
                 "users_jobseekerprofile"."unemployed_since",
                 "users_jobseekerprofile"."has_rsa_allocation",
                 "users_jobseekerprofile"."rsa_allocation_since",
                 "users_jobseekerprofile"."ass_allocation_since",
                 "users_jobseekerprofile"."aah_allocation_since",
                 "users_jobseekerprofile"."ata_allocation_since",
                 "users_jobseekerprofile"."are_allocation_since",
                 "users_jobseekerprofile"."activity_bonus_since",
                 "users_jobseekerprofile"."cape_freelance",
                 "users_jobseekerprofile"."cesa_freelance",
                 "users_jobseekerprofile"."actor_met_for_business_creation",
                 "users_jobseekerprofile"."mean_monthly_income_before_process",
                 "users_jobseekerprofile"."eiti_contributions",
                 "users_jobseekerprofile"."hexa_lane_number",
                 "users_jobseekerprofile"."hexa_std_extension",
                 "users_jobseekerprofile"."hexa_non_std_extension",
                 "users_jobseekerprofile"."hexa_lane_type",
                 "users_jobseekerprofile"."hexa_lane_name",
                 "users_jobseekerprofile"."hexa_additional_address",
                 "users_jobseekerprofile"."hexa_post_code",
                 "users_jobseekerprofile"."hexa_commune_id",
                 "users_jobseekerprofile"."pe_obfuscated_nir",
                 "users_jobseekerprofile"."pe_last_certification_attempt_at"
          FROM "users_jobseekerprofile"
          WHERE "users_jobseekerprofile"."user_id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ExternalDataImportQuerySet.first[<site-packages>/django/db/models/query.py]',
          'edit_user_info[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "external_data_externaldataimport"."id",
                 "external_data_externaldataimport"."status",
                 "external_data_externaldataimport"."created_at",
                 "external_data_externaldataimport"."source",
                 "external_data_externaldataimport"."user_id",
                 "external_data_externaldataimport"."report"
          FROM "external_data_externaldataimport"
          WHERE ("external_data_externaldataimport"."user_id" = %s
                 AND "external_data_externaldataimport"."source" = %s)
          ORDER BY "external_data_externaldataimport"."id" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'CustomFieldRenderer.render[utils/custom_renderer.py]',
          'SimpleNode[dashboard/includes/edit_job_seeker_info_form.html]',
          'IncludeNode[dashboard/edit_user_info.html]',
          'IfNode[dashboard/edit_user_info.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/edit_user_info.html]',
          'edit_user_info[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "asp_country"."id",
                 "asp_country"."code",
                 "asp_country"."name",
                 "asp_country"."group",
                 "asp_country"."department"
          FROM "asp_country"
          ORDER BY "asp_country"."name" ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Session.save[<site-packages>/django/db/models/base.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          UPDATE "django_session"
          SET "session_data" = %s,
              "expire_date" = %s
          WHERE "django_session"."session_key" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestEditUserInfoView.test_edit_without_title[missing title warning with phone and address]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i aria-hidden="true" class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p>Les champs suivants ne sont pas renseignés :</p>
                                          <ul class="mb-0">
                                              
                                                  
                                              
                                                  
                                                      <li>
                                                          <strong>Civilité</strong>
                                                      </li>
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                                      <li>
                                                          <strong>Téléphone</strong>
                                                      </li>
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                                      <li>
                                                          <strong>Adresse actuelle</strong>
                                                      </li>
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                          </ul>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: TestEditUserInfoView.test_edit_without_title[missing title warning without phone and with birthdate]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i aria-hidden="true" class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p>Les champs suivants ne sont pas renseignés :</p>
                                          <ul class="mb-0">
                                              
                                                  
                                              
                                                  
                                                      <li>
                                                          <strong>Civilité</strong>
                                                      </li>
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                                      <li>
                                                          <strong>Adresse actuelle</strong>
                                                      </li>
                                                  
                                              
                                                  
                                                      <li>
                                                          <strong>Date de naissance</strong>
                                                      </li>
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                                  
                                              
                                          </ul>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: TestEditUserInfoView.test_update_address[user address input on error]
  '''
  <select aria-describedby="id_address_for_autocomplete_helptext" class="form-select django-select2" data-ajax--url="http://ban-api/search/" data-allow-clear="false" data-minimum-input-length="3" data-placeholder="Ex. 102 Quai de Jemmapes 75010 Paris" data-theme="bootstrap-5" id="id_address_for_autocomplete" lang="fr" name="address_for_autocomplete">
    <option value="0">37 B Rue du Général De Gaulle, 67118 Geispolsheim</option>
  
  </select>
  '''
# ---
# name: TestEditUserInfoView.test_update_address[user address input]
  '''
  <select aria-describedby="id_address_for_autocomplete_helptext" class="form-select django-select2" data-ajax--url="http://ban-api/search/" data-allow-clear="false" data-minimum-input-length="3" data-placeholder="Ex. 102 Quai de Jemmapes 75010 Paris" data-theme="bootstrap-5" id="id_address_for_autocomplete" lang="fr" name="address_for_autocomplete">
    <option selected="" value="0">37 B Rue du Général De Gaulle, 67118 Geispolsheim</option>
  
  </select>
  '''
# ---
